--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Effort Avoidance</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>psychomotor vigilance test</title>
 </head>
 
 
 <body class="container d-flex flex-column justify-content-center min-vh-100">
+
 
     <p class="h1">
         Welcome to the experiment. This experiment will take around 7 minutes. Press <b>enter</b> to begin.
@@ -24,7 +25,7 @@
             const keyName = event.key;
             if (keyName == "Enter") {
                 document.removeEventListener("keypress", handleEnter);
-                renderNextPage("instructionsPage");
+                renderInstructions();
             }
         }
         document.addEventListener('keypress', handleEnter, false);
@@ -37,8 +38,6 @@
 
 
 <script src="./js/constants.js"></script>
-<script src="./js/pages.js"></script>
-<script src="./js/questions.js"></script>
 <script src="./js/experiment.js"></script>
 
 </html>
