--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 </head>
 
 
-<body class="container d-flex flex-column justify-content-center min-vh-100">
+<body class="container-md d-flex flex-column justify-content-center align-items-center text-center min-vh-100">
 
 
     <p class="h1">
-        Welcome to the experiment. This experiment will take around 7 minutes. Press <b>enter</b> to begin.
+        Welcome to the experiment.
     </p>
+    <p class="h1">
+        This experiment will take around 7 minutes.
+    </p>
+    <P class="h1">
+        Press <b>ENTER</b> to begin.
+    </P>
 
 
     <script>
