--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </body>
 
-
+<script src='./js/jquery-3.3.1.min.js'></script>
 <script src="./js/constants.js"></script>
 <script src="./js/experiment.js"></script>
 
